Melhoria no design
Remoção de tags não usadas;
Inclusão de comentario;

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/resume.min.css" rel="stylesheet">
+    <link href="css/resume.css" rel="stylesheet">
 
   </head>
 
@@ -52,10 +52,7 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
         </ul>
       </div>
@@ -71,7 +68,9 @@
           <div class="subheading mb-5">37 Chile of Paripe Street · Salvador, BA 40800-770 · (71) 98676-6629 ·
             <a href="mailto:breno.arantes97@gmail.com">breno.arantes97@gmail.com</a>
           </div>
-          <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="mb-5">
+            Autodidata, apoixonado por desenvolvimento e linguagens de programação. Altamente adaptavel, usando da tecnologia para atender as necessidades do negócio.
+            Disposto a encarar e resolver qualquer que seja o desafio.</p>
           <ul class="list-inline list-social-icons mb-0">           
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/breno-nunes/" target="_blank">
@@ -112,32 +111,14 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Estagiario Desenvolvimento de Software</h3>
               <div class="subheading mb-3">ip3 Soluções</div>
-              <p>-- Description</p>
+              <p>Empresa com ramo no desenvolvimento de soluções seguras e inteligentes voltadas para o negócio dos clientes.
+                  Atuei efetuando manutenção em aplicações Web de diversos seguimentos, como: envio de SMS, monitoria e
+                  auditoria de ligações e E-Mail marketing, todos em ASP.NET com C# usando arquitetura WebForms ou MVC.
+                  Além de aplicações Desktop e Windows Services. Manipulação de querys usando o banco de dados SQL Server.
+                  Uso de ferramenta de versionamento e gestão de tarefa (JIRA).</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Janeiro 2016 - June 2017</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
             </div>
           </div>
 
@@ -191,13 +172,7 @@
               <i class="devicons devicons-jquery"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-c"></i>
-            </li>
-            <li class="list-inline-item">
               <i class="devicons devicons-java"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-angularjs"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-react"></i>
@@ -218,19 +193,10 @@
               <i class="devicons devicons-github"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-gitlab"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-oracle"></i>
-            </li>
-            <li class="list-inline-item">
               <i class="devicons devicons-mysql"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-nodejs"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-tomcat"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-trello"></i>
@@ -238,19 +204,16 @@
             <li class="list-inline-item">
               <i class="devicons devicons-linux"></i>
             </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-windows8"></i>
-            </li>
           </ul>
 
           <div class="subheading mb-3">Workflow</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              Desenvolvimento Java WEB. (Spring, Struts)</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+              Teste JUnit</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Cross Functional Teams</li>
@@ -261,45 +224,16 @@
         </div>
       </section>
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
-        </div>
-      </section>
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
-        <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
+          <h2 class="mb-5">Projects</h2>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
+              https://play.google.com/store/apps/details?id=com.ToBTeam.PersonDefense&hl=pt_BR</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
+              https://play.google.com/store/apps/details?id=com.QuemSabe.NRSIM</li>            
           </ul>
         </div>
       </section>
